<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_welcome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.jobs.senior1.WelcomeActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="50pt"
        android:layout_marginBottom="50pt"
        android:text="LOGO"/>
    <Button
        android:id="@+id/signIn"
        android:layout_width="@dimen/button_margin"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_email" />
    <Button
        android:id="@+id/signUp"
        android:layout_width="@dimen/button_margin"
        android:layout_height="wrap_content"
        android:text="@string/sign_up" />

    <TextView
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/agree_condition"/>
</LinearLayout>
</RelativeLayout>
