<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_confirm_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.jobs.senior1.ConfirmCardActivity">


    <!--<RelativeLayout-->
        <!--android:id="@+id/loadingPanel"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:gravity="center" >-->

        <!--<ProgressBar-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:indeterminate="true" />-->
    <!--</RelativeLayout>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            >
<ImageView
    android:layout_width="match_parent"

    android:id="@+id/cardImage"
    android:background="@color/white"
    android:layout_height="210dp" />
        <ImageView
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="160dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentRight="true"
        android:id="@+id/pf"/>
        </RelativeLayout>


        <!--<View-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="1dip"-->
            <!--android:background="@color/grey" />-->

    <LinearLayout
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_default"
            android:text="@string/fname"/>

        <TextView
            android:id="@+id/fname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/grey"
            android:textSize="@dimen/text_default"
            android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_default"
                android:text="@string/lname"/>

            <TextView
                android:id="@+id/lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_default"
                android:textColor="@color/grey"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_default"
                android:text="@string/company"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/grey"
                android:id="@+id/company"
                android:textSize="@dimen/text_default"
                android:text=""/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_default"
                android:text="@string/position"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/text_default"
                android:textColor="@color/grey"
                android:id="@+id/postion"
                android:text=""/>
        </LinearLayout>
        </LinearLayout>
        <View
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/grey" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/note"
                android:textSize="@dimen/text_default"
                android:textColorHint="@color/grey"
                android:hint="@string/write_note"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/grey" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_default"
                android:textColorHint="@color/grey"
                android:id="@+id/hashtag"
                android:hint="@string/define_hashtag"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:id="@+id/decline"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
        <Button
            android:id="@+id/accept"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accept"
            android:layout_marginLeft="1dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"/>
    </LinearLayout>
</RelativeLayout>
