<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_card_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:orientation="vertical"
    tools:context="com.example.jobs.senior1.CardDetailActivity">
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:orientation="vertical"-->
    <!--&gt;-->
    <RelativeLayout
        android:id="@+id/loadingPanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center" >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />
    </RelativeLayout>

                    <ImageView
                        android:background="@color/lightgrey"
                        android:layout_gravity="center_vertical"
                        android:layout_width="match_parent"
                        android:layout_height="210dp"
                        android:id="@+id/cardImage"/>

    <LinearLayout
        android:padding="@dimen/activity_horizontal_margin"
        android:id="@id/layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_default"
                        android:text="@string/total_view"/>
                    <TextView
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/text_default"
                        android:text="@string/weekly_view"/>
                    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:gravity="right"
                android:textColor="@color/colorPrimary"
                android:id="@+id/totalView"
                android:textSize="@dimen/text_big"
                android:text="0"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:gravity="right"
                android:layout_weight="1"
                android:id="@+id/weeklyView"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/text_big"
                android:text="0"/>
        </LinearLayout>
</LinearLayout>


        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_default"
                android:text="@string/total_sent"/>
            <TextView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:textSize="@dimen/text_default"
                android:text="@string/weekly_sent"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/totalSent"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:gravity="right"
                android:textSize="@dimen/text_big"
                android:text="0"/>
            <TextView
                android:id="@+id/weeklySent"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColor="@color/colorPrimary"
                android:layout_weight="1"
                android:textSize="@dimen/text_big"
                android:text="0"/>
        </LinearLayout>
            </LinearLayout>

    </LinearLayout>
</LinearLayout>
