<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jobs.senior1.FragmentManageCard">

    <!-- TODO: Update blank fragment layout -->
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
            <LinearLayout
                android:padding="@dimen/activity_horizontal_margin"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                <TextView
                    android:textSize="@dimen/text_default"
                    android:layout_width="wrap_content"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/noti" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/noti_desc" />
                    </LinearLayout>
                <Switch
                    android:id="@+id/noti"
                    android:layout_gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgrey" />
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:orientation="vertical">

                <LinearLayout
                    android:padding="@dimen/activity_horizontal_margin"
                    android:background="@drawable/background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    <TextView
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_default"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/searchable" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/searchable_desc" />
                </LinearLayout>
                    <Switch
                        android:id="@+id/searchable"
                        android:layout_gravity="right"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightgrey" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:clickable="true"
                    android:background="@drawable/background"
                    android:textColor="@color/black"
                    android:padding="@dimen/activity_horizontal_margin"
                    android:id="@+id/update"
                    android:textSize="@dimen/text_default"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Update Profile" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgrey" />
            </LinearLayout>
        </TableRow>

        <TableRow>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">
            <TextView
                android:textColor="@color/black"
                android:padding="@dimen/activity_horizontal_margin"
                android:id="@+id/logout"
                android:textSize="@dimen/text_default"
                android:clickable="true"
                android:background="@drawable/background"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Logout" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgrey" />
        </LinearLayout>
        </TableRow>

    </TableLayout>
</FrameLayout>
